fixed max-width for proper display on iPhone devices (2 per row)

--- a/css/home.css
+++ b/css/home.css
@@ -119,7 +119,7 @@ i { font-size: 1.2em; padding: 0 10px; }
 	padding: 10px;
 	/*max-width: 900px;
 	min-height: 500px;*/
-	max-width: 80%;
+	max-width: 90%;
 	min-width: 40%;
 }
 
